--- a/src/main/resources/templates/articleManager.html
+++ b/src/main/resources/templates/articleManager.html
@@ -88,21 +88,22 @@
                 width: 100
             }]
         });
-        $('#remove').click(function () {
+        $('#remove').click(function () {if (confirm('确认删除吗')==true) {
             var ids = $.map($('#table').bootstrapTable('getSelections'), function (row) {
                 return row.articleId;
             });
-            var json=JSON.stringify(ids);
+            var json = JSON.stringify(ids);
             $.ajax({
-                type:'post',
-                url:host()+'/article/remove',
-                contentType : 'application/json;charset=utf-8',
-                data : json
+                type: 'post',
+                url: host() + '/article/remove',
+                contentType: 'application/json;charset=utf-8',
+                data: json
             });
             $('#table').bootstrapTable('remove', {
                 field: 'articleId',
                 values: ids
             });
+        }
         });
         $("#add").click(function () {
             $("#form")[0].reset();
