--- a/src/main/resources/templates/orderManager.html
+++ b/src/main/resources/templates/orderManager.html
@@ -139,21 +139,22 @@
                     }
                 }]
             });
-            $('#remove').click(function () {
+            $('#remove').click(function () {if (confirm('确认删除吗')==true) {
                 var ids = $.map($('#table').bootstrapTable('getSelections'), function (row) {
                     return row.orderId;
                 });
-                var json=JSON.stringify(ids);
+                var json = JSON.stringify(ids);
                 $.ajax({
-                    type:'post',
-                    url:host()+'/order/remove',
-                    contentType : 'application/json;charset=utf-8',
-                    data : json
+                    type: 'post',
+                    url: host() + '/order/remove',
+                    contentType: 'application/json;charset=utf-8',
+                    data: json
                 });
                 $('#table').bootstrapTable('remove', {
                     field: 'orderId',
                     values: ids
                 });
+            }
             });
             $("#add").click(function () {
                 $("#form")[0].reset();
