--- a/src/main/resources/templates/categoryManager.html
+++ b/src/main/resources/templates/categoryManager.html
@@ -73,7 +73,7 @@
                     title: '创建时间'
                 }]
             });
-            $('#remove').click(function () {
+            $('#remove').click(function () {if (confirm('确认删除吗')==true) {
                 var ids = $.map($('#table').bootstrapTable('getSelections'), function (row) {
                     return row.catId;
                 });
@@ -88,6 +88,7 @@
                     field: 'catId',
                     values: ids
                 });
+            }
             });
             $("#add").click(function () {
                 $("#form")[0].reset();
