--- a/src/main/resources/templates/systemManager.html
+++ b/src/main/resources/templates/systemManager.html
@@ -11,8 +11,8 @@
     <script src="https://cdn.bootcss.com/bootstrap-table/1.12.1/locale/bootstrap-table-zh-CN.min.js"></script>
     <style>
         .fun{
-            height: 100px;
-            font-size: 30px;
+            height: 80px;
+            font-size: 25px;
         }
         body{
             background-color: lightgray;
@@ -35,10 +35,10 @@
 
                 }, {
                     field: 'adminPassword',
-                    title: '登录密码'/*,
+                    title: '登录密码',
                     formatter:function () {
                         return "（已加密）"
-                    }*/
+                    }
                 }, {
                     field: 'adminLoginNum',
                     title: '登录次数'
