--- a/src/main/resources/templates/goodsManager.html
+++ b/src/main/resources/templates/goodsManager.html
@@ -38,7 +38,7 @@
                     }
                 },
                 onDblClickRow: function (row) {
-                    $("#title").text("编辑该纪录");
+                    $("#title").text("编辑评论");
                     $("#submit").attr('class', 'btn btn-warning');
                     $("#submit").text("修改");
                     $("#form").attr('action', host() + '/goods/update');
@@ -138,7 +138,7 @@
             });
             $("#add").click(function () {
                 $("#form")[0].reset();
-                $("#title").text("添加新纪录");
+                $("#title").text("新增评论");
                 $("#submit").attr('class', 'btn btn-info');
                 $("#submit").text("添加");
                 $("#form").attr('action', host() + '/goods/add');
