--- a/src/main/resources/templates/advertisementManager.html
+++ b/src/main/resources/templates/advertisementManager.html
@@ -39,7 +39,7 @@
 
                 },
                 onDblClickRow:function(row){
-                    $("#title").text("编辑该纪录");
+                    $("#title").text("编辑广告");
                     $("#submit").attr('class','btn btn-warning');
                     $("#submit").text("修改");
                     $("#form").attr('action',host()+'/advertisement/update');
@@ -102,7 +102,7 @@
             });
             $("#add").click(function () {
                 $("#form")[0].reset();
-                $("#title").text("添加新纪录");
+                $("#title").text("新增广告");
                 $("#submit").attr('class','btn btn-info');
                 $("#submit").text("添加");
                 $("#form").attr('action',host()+'/advertisement/add');
