--- a/src/main/resources/templates/memberManager.html
+++ b/src/main/resources/templates/memberManager.html
@@ -10,6 +10,7 @@
     <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://cdn.bootcss.com/bootstrap-table/1.12.1/bootstrap-table.min.js"></script>
     <script src="https://cdn.bootcss.com/bootstrap-table/1.12.1/locale/bootstrap-table-zh-CN.min.js"></script>
+    <script src="https://cdn.bootcss.com/jquery.form/4.2.2/jquery.form.js"></script>
 
     <script>
         $(document).ready(function () {
@@ -24,14 +25,24 @@
                 clickToSelect: true,
                 search: true,
                 toolbar: '#toolbar',
+                onClickCell:function (field, value, row) {
+                    if(field=="memberPic"){
+                        $("#dataForm")[0].reset();
+                        $("#fileForm")[0].reset();
+                        $("#dataForm").attr('action',host()+"/memberinfo/update");
+                        $("#picMemberId").val(row.memberId);
+                        $("#img").attr('src',value);
+                        $("#picBox").modal('show');
+                    }
+
+                },
                 onDblClickRow: function (row) {
-                    $("#title").text("编辑该纪录");
+                    $("#title").text("编辑会员");
                     $("#submit").attr('class', 'btn btn-warning');
                     $("#submit").text("修改");
                     $("#form").attr('action', host() + '/memberinfo/update');
                     $("#form")[0].reset();
                     $("#memberId").val(row.memberId);
-                    $("#catId").attr('readonly',true);
                     $("#memberMobile").val(row.memberMobile);
                     $("#memberName").val(row.memberName);
                     $("#memberPasswd").val(row.memberPasswd);
@@ -114,7 +125,7 @@
             });
             $("#add").click(function () {
                 $("#form")[0].reset();
-                $("#title").text("添加新纪录");
+                $("#title").text("新增会员");
                 $("#submit").attr('class', 'btn btn-info');
                 $("#submit").text("添加");
                 $("#form").attr('action', host() + '/memberinfo/add');
@@ -129,7 +140,29 @@
             $("#uncheckAll").click(function () {
                 $("#table").bootstrapTable('uncheckAll');
             });
+            $("#choosePic").click(function () {
+                $("#fileInput").click();
+            });
+            $("#setPic").click(function () {
+                $("#fileForm").attr('action',host()+"/uploadfile");
+                $("#fileInput").click();
+            });
+            $("#picSubmit").click(function () {
+                $("#dataForm").submit();
+            });
         });
+        function upload(){
+            $("#fileForm").attr('action',host()+"/uploadfile");
+            $("#fileForm").ajaxSubmit({
+                success:function (data) {
+                    $("#picMemberPic").val(data);
+                    $("#memberPic").val(data);
+                    $("#img").attr('src',data);
+                    $("#picChoosen").attr('src',data);
+                }
+            });
+
+        }
         function host() {
             return "http://" + window.location.host;
         }
@@ -165,7 +198,7 @@
                         <div class="form-group">
                             <label class="col-sm-2 control-label">ID:</label>
                             <div class="col-sm-2">
-                                <input name="memberId" id="memberId" type="text" class="form-control">
+                                <input name="memberId" id="memberId" type="text" class="form-control" readonly="readonly">
                             </div>
 
                             <label class="col-sm-2 control-label">手机号:</label>
@@ -228,25 +261,47 @@
                                 <input name="memberState" type="radio" class="form-control" value="0"><label
                                     col-sm-1>关闭</label>
                             </div>
-                            <label class="col-sm-2 control-label">头像:</label>
-                            <div class="col-sm-2">
-                                <input name="memberPic" id="memberPic" type="text" class="form-control">
-                            </div>
-
+                            <input name="memberPic" id="memberPic" type="text" style="display: none">
                         </div>
-
 
                     </form>
                 </div>
-
-
                 <div class="modal-footer">
+                    <button id="setPic" class="btn btn-info pull-left">设置图片 <img id="picChoosen" height="20px" /></button>
+
                     <button id="submit" type="button">提交</button>
                     <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
                 </div>
             </div>
         </div>
     </div>
+
+    <div id="picBox" class="modal fade" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title"></h4>
+                </div>
+                <div class="modal-body">
+                    <img id="img" class="img-thumbnail">
+                    <form id="fileForm" enctype="multipart/form-data"  method="post" style="display: none">
+                        <input name="fs" id="fileInput" type="file" onchange="upload()">
+                    </form>
+                    <form id="dataForm" style="display: none">
+                        <input name="memberId" id="picMemberId" type="txet">
+                        <input name="memberPic" id="picMemberPic" type="text">
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button id="choosePic" class="btn btn-info pull-left">修改图片</button>
+                    <button id="picSubmit" class="btn btn-warning" type="button">提交</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                </div>
+            </div>
+        </div>
+    </div> <!--box-->
+
 
 </div>
 </body>
