--- a/src/main/resources/templates/systemManager.html
+++ b/src/main/resources/templates/systemManager.html
@@ -65,6 +65,7 @@
                 }]
             });
             $("#m1").click(function () {
+                $('#table').bootstrapTable("refresh");
                 $('#table').bootstrapTable("showAllColumns");
                 $('#table').bootstrapTable("hideColumn","adminLoginTime");
                 $("#adminBox").modal('show');
@@ -80,6 +81,7 @@
                 
             });
             $("#m4").click(function () {
+                $('#table').bootstrapTable("refresh");
                 $('#table').bootstrapTable("hideAllColumns");
                 $('#table').bootstrapTable("showColumn","adminName");
                 $('#table').bootstrapTable("showColumn","adminLoginTime");
@@ -90,7 +92,8 @@
                 $.get(host()+"/admin/add",data,function (data) {
                     if(data=="YES") {
                         alert("添加成功！");
-                        $("#adminBox").modal('hide');
+                        $("#formBox").modal('hide');
+                        $("#m1").click();
                     }
                 });
 
@@ -128,7 +131,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title">订单详细清单</h4>
+                    <h4 class="modal-title">新增管理员</h4>
                 </div>
                 <div class="modal-body">
                     <table id="table"></table>
@@ -145,7 +148,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title" id="title"></h4>
+                    <h4 class="modal-title" id="title">新加管理员</h4>
                 </div>
                 <div class="modal-body">
                     <form id="form" class="form-horizontal">
@@ -188,7 +191,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title" id="title"></h4>
+                    <h4 class="modal-title" id="title">修改密码</h4>
                 </div>
                 <div class="modal-body">
                     <form id="passwordForm" class="form-horizontal">
