--- a/src/main/resources/templates/systemManager.html
+++ b/src/main/resources/templates/systemManager.html
@@ -31,7 +31,8 @@
                     title: 'ID'
                 }, {
                     field: 'adminName',
-                    title: '管理员名称'
+                    title: '管理员名称',
+                    width: 100
 
                 }, {
                     field: 'adminPassword',
@@ -41,7 +42,8 @@
                     }
                 }, {
                     field: 'adminLoginNum',
-                    title: '登录次数'
+                    title: '登录次数',
+                    width: 20
                 }, {
                     field: 'adminIsSuper',
                     title: '管理员级别',
@@ -58,10 +60,12 @@
                     }
                 }, {
                     field: 'adminLoginTime',
-                    title: '登录时间'
+                    title: '登录时间',
+                    width: 150
                 }, {
-                    field: 'createTime',
-                    title: '创建时间'
+                    field: 'createdTime',
+                    title: '创建时间',
+                    width: 150
                 }]
             });
             $("#m1").click(function () {
@@ -127,7 +131,7 @@
     </div>
 
     <div id="adminBox" class="modal fade" tabindex="-1" role="dialog">
-        <div class="modal-dialog" role="document">
+        <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
