--- a/src/main/resources/templates/systemManager.html
+++ b/src/main/resources/templates/systemManager.html
@@ -61,11 +61,13 @@
                 }, {
                     field: 'adminLoginTime',
                     title: '登录时间',
-                    width: 150
+                    width: 150,
+                    sortable:true
                 }, {
                     field: 'createdTime',
                     title: '创建时间',
-                    width: 150
+                    width: 150,
+                    sortable:true
                 }]
             });
             $("#m1").click(function () {
