--- a/src/main/resources/templates/advertisementManager.html
+++ b/src/main/resources/templates/advertisementManager.html
@@ -50,6 +50,7 @@
                     $("#advOffline").val(row.advOffline);
                     $("#advLinkUrl").val(row.advLinkUrl);
                     $("#advCratetime").val(row.advCratetime);
+                    $("#advOrder").val(row.advOrder);
                     $("#formBox").modal('show');
                 },
                 columns: [{
@@ -60,6 +61,10 @@
                 }, {
                     field: 'advTitle',
                     title: '标题'
+                }, {
+                    field: 'advOrder',
+                    title: '优先级',
+					sortable:true
                 }, {
                     field: 'advPicUrl',
                     title: '图片',
@@ -176,19 +181,23 @@
 							</div>
 
 							<label class="col-sm-2 control-label">标题:</label>
-							<div class="col-sm-2">
+							<div class="col-sm-3">
 								<input name="advTitle" id="advTitle" type="text" class="form-control">
 							</div>
 
-							<label class="col-sm-2 control-label">是否下线:</label>
+							<label class="col-sm-2 control-label">优先级:</label>
 							<div class="col-sm-2">
-								<input name="advOffline" id="advOffline" type="number" class="form-control">
+								<input name="advOrder" id="advOrder" type="number" class="form-control">
 							</div>
 						</div>
 
 						<div class="form-group">
+							<label class="col-sm-2 control-label">是否下线:</label>
+							<div class="col-sm-2">
+								<input name="advOffline" id="advOffline" type="number" class="form-control">
+							</div>
 							<label class="col-sm-2 control-label ">跳转地址:</label>
-							<div class="col-sm-10">
+							<div class="col-sm-6">
 								<input name="advLinkUrl" id="advLinkUrl" type="text" class="form-control">
 							</div>
 						</div>
